--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <footer>
-        <a url="foryou.html" class="link-hide">
+       <a href="foryou.html" class="link-hide">
             <div class="bottom-text">&#169;2025 - deririzz
             </div>
         </a>
