--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="profile-about"><b id="description_component"></b></div>
     <div id="link-container">
         <div style="text-align: center;">
-            <audio controls>
-            <source src="assets/music/sal.mp3" type="audio/mpeg">
-            </audio>
+          <audio autoplay loop>
+                <source src="assets/music/promise.mp3" type="audio/mpeg">
+              </audio>
         </div>
     </div>
     <footer>
