--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <audio autoplay loop>
-        <source src="assets/music/sal.mp3" type="audio/mpeg">
+        <source src="assets/music/promise.mp3" type="audio/mpeg">
     </audio>
     <img src="assets/img/3.3.png" alt="profile picture" class="profile-picture">
     <div class="profile-name"><b id="name_component"></b></div>
