--- a/anakmalam.html
+++ b/anakmalam.html
@@ -54,7 +54,10 @@ seburuk yang gw pikirkan.</td></tr>
     <tr><td>
         ayo kita ulangi semuanya, maafin kesalahan gw waktu itu, semoga bisa ya. hubungin gw lagi, gw masih menunggu kabar lu jamet(anak malam) sebelum kita asing terlalu jauh, gw ga mau sampai asing kayagini.</td></tr>
     </div>
-    
+     <div class="profile-name"><b id=""></b>
+    <tr><td>
+        kalau nanti gw ga menghubungi lu lagi, bukan gw gamau asing ya, gw takut ganggu lu co spam. gw harap kalau nanti gw ga hubingin lu, telpon gw, udah itu aja, pokonya jangan sampe asing, maaf kalau keliatannya alay wkwk,. see you. gw tunggu lu "anak malam" 
+        </div>
     <div class="profile-about"><b id="description_component"></b></div>
     <div id="link-container">
         <div style="text-align: center;">
